--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/intro.html">My Intro</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
