--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <div class="about">Learner, Developer, Yogist</div>
                 <div class="moreabout">
 
-                    I'm an IT Student and I'm from Nepalgunj,Banke. I'm currently studying Bsc.CSIT at Nepalgunj Campus in 8<sup>th</sup> Semester, and I hope to become Perfect Developer one day.
-                    I'm really passionate about Programming, and I'm always looking for new ways to learn and improve my skills. I'm also a firm believer of teamwork, and I believe that working together is the best way to achieve success.</div>
-                <div class="buttons">
+                    Passionate about programming and dedicated to continuous learning, I thrive on exploring new technologies and pushing my limits.
+                    With a firm belief in the power of teamwork, I aim to contribute to innovative projects and collaborate with like-minded individuals to achieve exceptional results. 
+                    <div class="buttons">
                     <a href="/cv.txt" target="_blank">
                     <button class="btn">Download CV</button></a>
                    <a href="/contact.html"> <button class="btn">Contact Me</button></a>
