--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <div class="about">Learner, Developer, Yogist</div>
                 <div class="moreabout">
 
-                    Passionate about programming and dedicated to continuous learning, I thrive on exploring new technologies and pushing my limits.
-                    With a firm belief in the power of teamwork, I aim to contribute to innovative projects and collaborate with like-minded individuals to achieve exceptional results. 
+                    Passionate about programming and dedicated to continuous learning, I thrive on exploring new technologies and
+                    pushing my limits. With a firm belief in the power of teamwork, I aim to contribute to innovative projects and
+                    collaborate with like-minded individuals to achieve exceptional results. 
                     <div class="buttons">
                     <a href="/cv.txt" target="_blank">
                     <button class="btn">Download CV</button></a>
